# gent4-juliana

DetectorLinac/: #DetectorLinac.cc#  .directory  CMakeLists.txt  DetectorLinac.cc  DetectorLinac.cc~  GNUmakefile  GantryData.out  run.mac  vis.mac
DetectorLinac/include/: DicomDetectorConstruction.hh  DicomLinac.hh  DicomPrimaryGeneratorAction.hh  G4IAEAphspReader.hh  Run.hh  RunAction.hh  SteppingAction.hh  SteppingVerbose.hh
DetectorLinac/src/: #DicomDetectorConstruction.cc#  #SteppingAction.cc#  DicomActionInitialization.cc  DicomActionInitialization.cc~  DicomDetectorConstruction.cc  DicomDetectorConstruction.cc~  DicomEventAction.cc  DicomLinac.cc  DicomPrimaryGeneratorAction.cc  G4IAEAphspReader.cc  G4IAEAphspWriter.cc  Run.cc  RunAction.cc  SteppingAction.cc  SteppingAction.cc~  SteppingVerbose.cc  TrackingAction.cc
build_PhaseSpacelinac1/: .cproject  .project  CMakeCache.txt  DetectorLinac  GantryData.out  Makefile  cmake_install.cmake  currentEvent.rndm  currentRun.rndm  nohup.out  run.mac  run.sh  run.sh~  run1_prep.mac  run2.mac  run2_prep.mac  run3.mac  run3_prep.mac  run4.mac  run4_prep.mac  test.txt  vis.mac
